# fastapi-template

./: .gitignore  README.md  main.py  pyproject.toml
models/: modelTemplate.py
routers/: routerTemplate.py
